# jax-tap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_HEADER.txt  README.md  RELEASE.md  pyproject.toml
.github/workflows/: nightly.yml  publish-stub.yml  publish.yml  test.yml
bench/: README.md  _common.py  a1_decompose.py  bench_overhead.py  bench_v2.py  callback_floor.py  debug_taps.py  nightly_gate.py  progress_bar.py  while_cond_overhead.py
bench/profiling/: README.md  check_cb_types.py  profile_inside_cb.py  targeted_empty_payload.py
case_ledger/: 01_float32_cholesky_trap.py  README.md
demo/: README.md  async_dispatch_compile_blowup.py  backward_pass_vjp_nan.py  blackjax_warmup_telemetry.py  cholesky_float32_trap.py  lbfgs_maxiter_curvature.py  lowrank_metric_stuck.py  mass_matrix_ndim_mismatch.py  multinomial_da_bimodal.py  treedepth_saturation.py  vmap_chains_progress.py
docs/proposals/: y-taps.md
proofs/: README.md  jaxtap_probe.py  jaxtap_sketch.py  jaxtap_while_sketch.py
proofs/ashell-review/arm-l/: 01_same_object_reenter.py  02_manual_enter_no_gc_selfheal.py  03_callback_thread_probe.py  04_delegate_captures_bystander.py  05_two_owned_and_bystander.py  06_registry_race_stress.py  07_nonlifo_exit.py  08_foreign_and_warnonce.py  09_verbose_inside_context.py  10_exit_without_enter.py  11_generator_and_async.py  12_blocker_confirm.py
proofs/ashell-review/arm-s/: a1_positional_and_paths.py  a2_fidelity_sweep.py  a3_equivalence_and_transforms.py  a4_transform_events.py  a5_disentangle.py  a6_depth_and_collision.py
proofs/ashell-review/fix-review/: fixreview_l2_probe.py  fixreview_r2_attacks.py
proofs/attack-ledger-964/: README.md
proofs/attack-ledger-964/arm-a/: attack_aot.py  attack_checkpoint.py  attack_checkpoint_isolate.py  attack_checkpoint_isolate2.py  attack_cond_cache_isolate.py  attack_cond_while.py  attack_grad.py  attack_jit_cache_cross.py  attack_length_xs_mismatch.py  attack_misc_kwargs.py  attack_plain_jit_repeat.py  attack_pytree_xs.py  attack_real_jitted_repeat.py  attack_real_jitted_repeat_counting.py  attack_real_repeat_run.py  attack_reverse_order.py  ays2_1_batched_arg_unroll.py  ays2_2_overhead_and_closed_flag.py  ays_i_single_context_loop.py  ays_ii_fresh_wrapper_tracecount.py  ays_iii_reverse_fix_repro.py  ays_iii_vmap_counter_semantics.py  ays_iii_vmap_real_sampler_probe.py  ays_iv_vmap_cond_fresh.py  ays_iv_vmap_cond_while.py  ays_iv_vmap_while_fresh.py  ays_v_aot_dead_state_fire.py
proofs/attack-ledger-964/arm-b/: 01_import_hygiene.py  02_exception_restoration.py  03_manual_enter_no_exit.py  04_bystander_scan_inside_with.py  05_thread_crosstalk.py  06_registry_race_stress.py  07_shard_map_scan.py  08_patch_clobber_matrix.py  09_partial_captured_before.py  10_shared_output_file.py  11_nested_contexts.py  12_leak_check.py  13_async_dispatch_bar_disappears.py  14_two_owned_contexts_no_affinity.py  15_gc_selfheal.py  16_worker_thread_delegation.py  17_contextvars_propagation_semantics.py  18_targeted_affinity_heuristic.py  19_patch_stack_fix.py  20_axis_index_feasibility.py  21_skewed_device_premature_complete.py  22_reader_races_delete_ACTUAL.py  (+10 more)
proofs/ays-m0/: README.md  ays_seams_vmap_grad_customjvp.py  rootcause_customjvp_subfuns.py  round2_customvjp_sentinel_rule.py
proofs/bcore-review/: README.md
proofs/m1a-ays/: ays_m1a.py  ays_m1a_r2.py
proofs/m1b-ays/: ays_m1b.py  ays_m1b_r2.py
proofs/m1d-ays/: ays_m1d.py  ays_m1d_r2.py
proofs/primitive-tap-scoping/: prototype_primitive_tap.py
proofs/semantic-progress/: semantic_progress.py
src/jaxtap/: __init__.py  _ashell.py  _rewrites.py  _walker.py  collectors.py
stub/: README.md  pyproject.toml
tests/: test_ashell.py  test_carry_alerts.py  test_collectors.py  test_jaxtap.py  test_m1c_alerts.py  test_m1c_scope_addition.py  test_m1c_ux_fixes.py  test_m1d_api_polish.py  test_router_maxdepth.py  test_ytaps.py
tests/conformance/: COVERAGE_MAP.md  __init__.py  test_ashell_conformance.py  test_bcore_conformance.py
tools/: gpu_pypi_validate.sh  gpu_rc_validate.sh
(+25 files in other folders)
