[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-tap"
version = "0.2.0"
description = "Zero-code-change runtime telemetry for JAX control flow"
authors = [{ name = "arcueil", email = "junpenglao@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jax>=0.10"]

[project.urls]
Homepage = "https://github.com/arcueil/jax-tap"
Repository = "https://github.com/arcueil/jax-tap"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxtap"]

[project.optional-dependencies]
pandas = ["pandas"]

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "pre-commit", "pandas"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["proofs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
