[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jax-tap"
dynamic = ["version"]
description = "Zero-code-change runtime telemetry for JAX control flow"
authors = [{ name = "arcueil", email = "junpenglao@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jax>=0.10"]

[project.urls]
Homepage = "https://github.com/arcueil/jax-tap"
Repository = "https://github.com/arcueil/jax-tap"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jaxtap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxtap"]

[project.optional-dependencies]
pandas = ["pandas"]

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "pre-commit", "pandas"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["proofs/", "src/jaxtap/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["src/jaxtap/_version\\.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Warnings are errors in the regular suite too (not just the nightly canary),
# so an unhandled warning fails at merge instead of surfacing days later on
# JAX head. Tests that exercise a warn path must use pytest.warns(). JAX-head
# deprecations remain the nightly canary's job (it pins nothing).
filterwarnings = ["error"]
