[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxtap"
version = "0.1.0"
description = "Alias for jax-tap. `pip install jaxtap` installs jax-tap — the import name is jaxtap either way."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["jax-tap>=0.1.0"]

[project.urls]
Homepage = "https://github.com/arcueil/jax-tap"
Repository = "https://github.com/arcueil/jax-tap"

# Metapackage: ships NO modules. The real `jax-tap` distribution owns the
# `jaxtap` import package; shipping any module here would collide with it.
[tool.hatch.build.targets.wheel]
bypass-selection = true
